@@ -22,6 +22,7 @@ Included
 - New adapter discovery command: `weftend adapter list`
 - New adapter maintenance/health command: `weftend adapter doctor`
 - Added readable doctor mode: `weftend adapter doctor --text` (deterministic local guidance, no auto-install/network).
+- Added strict doctor mode: `weftend adapter doctor --strict` (fails closed on invalid policy state or unresolved missing-plugin requirements).
 - Added policy writer mode: `weftend adapter doctor --write-policy <path> [--include-missing-plugins]`.
 - Policy writer now uses two-phase finalize (`<path>.stage -> <path>`) and fails closed with explicit write error on output failure.
 - `--include-missing-plugins` now requires `--write-policy` (no more silent no-op flag usage).
